# tap-pingdom

./: .copier-answers.yml  .pre-commit-config.yaml  CLAUDE.md  README.md  meltano.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yaml  build.yml  test.yaml  test.yml  update_catalog.yaml  update_catalog.yml
scripts/: update_openapi.py
tap_pingdom/: __init__.py  __main__.py  client.py  schema_utils.py  streams.py  tap.py
tap_pingdom/openapi/: __init__.py  openapi.json
tests/: __init__.py  conftest.py  test_core.py  test_schema_evolution.py
tests/__snapshots__/test_schema_evolution/: test_catalog_changes[actions].json  test_catalog_changes[checks].json  test_catalog_changes[contacts].json  test_catalog_changes[results].json
