[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "tap-pingdom"
description = "Singer tap for Pingdom, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "Pingdom",
  "singer.io",
]
license = "Apache-2.0"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "singer-sdk~=0.54.5",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[[project.maintainers]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
tap-pingdom = "tap_pingdom.tap:TapPingdom.cli"
[project.urls]
Documentation = "https://github.com/edgarrmondragon/tap-pingdom#readme"
Homepage = "https://github.com/edgarrmondragon/tap-pingdom"
Source = "https://github.com/edgarrmondragon/tap-pingdom"

[dependency-groups]
dev = [
  "deptry>=0.25",
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "pytest>=9",
  "pyyaml>=6",
  "singer-sdk[testing]",
  "syrupy>=5.4",
]
typing = [
  "mypy>=2.1",
  "ty>=0.0.56",
  { include-group = "testing" },
]

[tool.hatch.version]
fallback-version = "0.0.0.dev0"
source = "vcs"

[tool.uv]
required-version = ">=0.10"

[tool.ruff]
line-length = 88
preview = true
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
  "PD",     # pandas-vet
]
per-file-ignores."scripts/*" = [
  "INP001", # implicit-namespace-package
  "T201",   # print
  "TRY400", # error-instead-of-exception
]
per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
unfixable = [
  "ERA001", # commented-out-code
]
flake8-annotations.allow-star-arg-any = true
pydocstyle.convention = "google"

[tool.deptry]
extend_exclude = [ "scripts" ]

[tool.pyproject-fmt]
table_format = "long"

[tool.typos.files]
extend-exclude = [ "tap_pingdom/openapi/openapi.json" ]

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
strict = true
warn_unused_configs = true

[tool.pytest]
addopts = [
  "-v",
  "--durations=10",
  "-ra",
]
filterwarnings = [
  "error",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [
  "tests",
]

[tool.tox]
requires = [
  "tox>=4.55",
  "tox-uv>=1.35",
]
env_list = [
  "dependencies",
  "test",
  "typing",
]
[tool.tox.env.dependencies]
description = "check for unused, missing and transitive dependencies"
dependency_groups = [ "dev" ]
commands = [
  [ "deptry", { replace = "posargs", default = [ "." ], extend = true } ],
]
labels = [ "check" ]

[tool.tox.env.typing]
description = "type checks with mypy and ty"
dependency_groups = [ "typing" ]
commands = [
  [ "mypy", { replace = "posargs", default = [ "tap_pingdom", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_pingdom", "tests" ], extend = true } ],
]
labels = [ "check" ]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
description = "run tests on Python {py_dot_ver}"
dependency_groups = [ "testing" ]
pass_env = [
  "GITHUB_*",
  "TAP_PINGDOM_*",
]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]
labels = [ "test" ]
